* Add apdir parameter to enable listing all pages from Z to A
* (bug 11721) Use a different title for results than for the help page.
* (bug 11562) Added a user_registration parameter/field to the list=allusers query.
* (bug 11588) Preserve document structure for empty dataset in backlinks query.
* Allow staying logged in through lg* parameters instead of cookies

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Aragonese (an)
* Old English (ang) (new)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Catalan (ca)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Ewe (ee) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Fulah (ff)
* Võro (fiu-vro)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Frisian (fy)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Gilaki (glk) (new)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Armenian (hy)
* Indonesian (id)
* Ingush (inh) (new)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kazakh (kk)
* Kannada (kn)
* Korean (ko)
* Kurdish (Latin) (ku-latn)
* Cornish (kw) (new)
* Latin (la)
* Limbugian (li)
* Lozi (loz) (new)
* Lingala (ln)
* Lithuanian (lt)
* Malayalam (ml)
* Malay (ms)
* Erzya (myv) (new)
* Nahuatl (nah)
* Min-nan (nan)
* Low Saxon (nds)
* Dutch Low Saxon (nds-nl)
* Newari (new) (new)
* Dutch (nl)
* Norwegian (no)
* Deitsch (pdc) (new)
* Polish (pl)
* Piemontèis (pms)
* Pashto (ps)
* Portugese (pt)
* Quechua (qu)
* Rhaeto-Romance (rm) (new)
* Romanian (ro)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Sindhi (sd)
* Sassarese (sdc) (new)
* Seri (sei) (new)
* Tachelhit (shi)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)