@@ -158,6 +158,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * (bug 11562) Added a user_registration parameter/field to the list=allusers query.
 * (bug 11588) Preserve document structure for empty dataset in backlinks query.
 * Allow staying logged in through lg* parameters instead of cookies
+* Outputting list of all user preferences rather than having to request them by name
 
 === Languages updated in 1.12 ===
 
